# LLMQuiver

./: .gitignore  README.md  README_CN.md  poetry.toml  pyproject.toml  requirement.txt
.github/workflows/: publish-to-test-pypi.yml
llm_quiver/: __init__.py  cache_manager.py  io_util.py  llm_quiver.py  prompt_template_parser.py  support_api.py  wrap_openai.py
llm_quiver/prompt/: prompt_template_parser.py
tests/unit_tests/: hello_world.py  test_openai_like.py
tests/unit_tests/configs/: .gitignore  .test_openai_like.env  gpt4o.toml  vllm.toml
tests/unit_tests/prompts/: hello_world.jinja2  hello_world.toml  messages_test.toml
tests/unit_tests/scripts/: test_hello_world.sh  test_openai_like.sh
